crates/nexus/tests/compile_fail/id_missing_display.stderr
error[E0277]: the trait bound `BadId: AsRef<[u8]>` is not satisfied
 --> tests/compile_fail/id_missing_display.rs:9:13
  |
9 | impl Id for BadId {}
  |             ^^^^^ unsatisfied trait bound
  |
help: the trait `AsRef<[u8]>` is not implemented for `BadId`
 --> tests/compile_fail/id_missing_display.rs:6:1
  |
6 | struct BadId(u64);
  | ^^^^^^^^^^^^
note: required by a bound in `Id`
 --> src/id.rs
  |
  | pub trait Id: Clone + Send + Sync + Debug + Hash + Eq + Display + AsRef<[u8]> + 'static {}
  |                                                                   ^^^^^^^^^^^ required by this bound in `Id`

error[E0277]: `BadId` doesn't implement `std::fmt::Display`
 --> tests/compile_fail/id_missing_display.rs:9:13
  |
9 | impl Id for BadId {}
  |             ^^^^^ unsatisfied trait bound
  |
help: the trait `std::fmt::Display` is not implemented for `BadId`
 --> tests/compile_fail/id_missing_display.rs:6:1
  |
6 | struct BadId(u64);
  | ^^^^^^^^^^^^
note: required by a bound in `Id`
 --> src/id.rs
  |
  | pub trait Id: Clone + Send + Sync + Debug + Hash + Eq + Display + AsRef<[u8]> + 'static {}
  |                                                         ^^^^^^^ required by this bound in `Id`
